[package]
name = "belote_libre"
version = "0.1.0"
authors = ["sami jaghouar <sami.jaghouar@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rand = "0.8.4"
